--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,11 @@
     <string name="input_hint">Start typing your thoughts…</string>
     <string name="source_code">Source code</string>
 
+    <string name="preferences_import_export">Import/Export (Under construction)</string>
+    <string name="preference_import">Import diary</string>
+    <string name="preference_export">Export diary</string>
+
+    <string name="not_yet_implemented">Not yet implemented</string>
+
     <string name="source_code_url" translatable="false">https://github.com/TecCheck/Diary</string>
 </resources>
